--- a/Hyundai Cars/index.html
+++ b/Hyundai Cars/index.html
@@ -154,37 +154,49 @@
             <div class="boxs">
                 <img src="Images/Img-4.jpg" alt="">
                 <div class="msg">
-                    <p>Hyundai india culture week 2024 closed with a spectculer show! Rashmika Mandana and vicky kaushal shone in falgune shane Pecocks 'Rang Mahal' Collection, sharing the stage with stylish hyundai IQNIQ5. </p>
+                    <p>
+                        "The Hyundai Motor Group Executive Chair, Mr. Euisun Chung met the Prime Minister of India, Mr. Narendra Modi. They had wide ranging discussions on subjects related to the future of mobility. Due to India's diverse market and reformist approach, Hyundai attaches great priority to working closely with India."
+                    </p>
                 </div>
             </div>
             <div class="boxs">
                 <img src="Images/Img-5.jpg" alt="">
                 <div class="msg">
-                    <p> Reveal in the seamles blend of culture and inovation with falgune shane Pecocks 'Rang Mahal' Collection and all-electric SUV Hyundai IQNIQ5 at the Hyundai india culture week 2024 closing show. </p>
+                    <p> 
+                        "Experience the joy of euphoric music and everlasting memories when you join the tribe that celebrates you! Witness the thrill that #FansOfHyundai felt when they got a chance to live life out loud with us. "
+                    </p>
                 </div>
             </div>
             <div class="boxs">
                 <img src="Images/Img-6.jpg" alt="">
                 <div class="msg">
-                    <p> Falgunie shane pecock celibrates 20 years of india weaving culture and skills into global fashion. Their collection at hyundai indai couture weak 2024, paired with inovation Hyundai IQNIQ5, Eptimoise Hyundai vison of 'Progress for humanity'. </p>
+                    <p> 
+                        "The #HyundaiSoirée in Chennai was a resounding success, bringing together our esteemed #HyundaiIONIQ5 community for an evening of refined dining, networking, and unforgettable experiences."
+                    </p>
                 </div>
             </div>
             <div class="boxs">
                 <img src="Images/Img-7.jpg" alt="">
                 <div class="msg">
-                    <p> Introducing hyundai EXTER HY-cng duo starting at just Rs.8,50,300 it''s dual siliender CNG Maximizes boot space.Think suv.think EXTER. </p>
+                    <p>
+                        "Space meets efficiency with Hy-CNG Duo! Hyundai EXTER and Grand i10 NIOS with Hy-CNG Duo feature dual-cylinder CNG, cleverly tucked under the boot floor for more storage and impressive fuel efficiency. Book yours today!"
+                    </p>
                 </div>
             </div>
             <div class="boxs">
                 <img src="Images/Img-8.jpg" alt="">
                 <div class="msg">
-                    <p> Home is where the heart is.This ounam join hyundai in clebrating the beautifull jurney of reutrnig to the place that holds our dearest memories. </p>
+                    <p> 
+                        "Upgrade to the comfort that even SRK doesn't want to leave behind. The bold new Hyundai ALCAZAR is waiting to be yours. Book a test drive today:"
+                    </p>
                 </div>
             </div>
             <div class="boxs">
                 <img src="Images/Img-9.jpg" alt="">
                 <div class="msg">
-                    <p> THe perfect fusion of sleek design and high perfomence. The hyundai EXTER knight is here. </p>
+                    <p> 
+                        "#HyundaiSuperDelightDays are here! Grab the best deals and #HyundaiFestiveOffers before the sweets, and your favourite cars run out! Visit your nearest Hyundai showroom today. "
+                    </p>
                 </div>
             </div>
         </div>
@@ -327,4 +339,3 @@
 
 </body>
 </html>
-
